# django-graylog

./: .gitignore  LICENSE  README.md  django_graylog.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
src/django_graylog/: __init__.py
testapp/: asgi.py  settings.py  tests.py  urls.py  views.py
